Bug 436541 - List overlayed packages
Summary: List overlayed packages
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: rpm-ostree Backend (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Timothée Ravier
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-03 16:27 UTC by Timothée Ravier
Modified: 2022-10-18 17:55 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timothée Ravier 2021-05-03 16:27:15 UTC
SUMMARY

On rpm-ostree based systems, we should list overlayed packages in the resource corresponding to a deployment.

STEPS TO REPRODUCE

1. Select the currently booted Kinoite deployment

OBSERVED RESULT

The description / information field is not yet accurate.

EXPECTED RESULT

The description / information field should include the list of overlayed packages.

SOFTWARE/OS VERSIONS

Fedora Kinoite only
Comment 1 Bug Janitor Service 2022-10-18 17:34:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/394
Comment 2 Aleix Pol 2022-10-18 17:55:53 UTC
Git commit 9ed2691fc07bb0d065d3f208229177723e179dd1 by Aleix Pol Gonzalez, on behalf of Timothée Ravier.
Committed on 18/10/2022 at 17:52.
Pushed by apol into branch 'master'.

rpm-ostree: Display added or removed packages

List installed, locally installed, removed and replaced packages for
each deployment.

M  +51   -1    libdiscover/backends/RpmOstreeBackend/RpmOstreeResource.cpp
M  +5    -0    libdiscover/backends/RpmOstreeBackend/RpmOstreeResource.h

https://invent.kde.org/plasma/discover/commit/9ed2691fc07bb0d065d3f208229177723e179dd1