rpm-ostree: Display added or removed packages

List installed, locally installed, removed and replaced packages for
each deployment.

BUG: 436541